@startuml ced_er_diagram

entity ChangeAudit {
    * id: uuid
    --
    * operator_id: uuid <<FK>>
    * referent_external_id: string
    * referent_fullname: string
    * entity_type: enum("opportunity","place","support_contact",...)
    * entity_id: uuid
    * change_type: enum("create","update")
    * created_at: timestamp
    * value: json
}

entity Operator {
    * id: uuid
    --
    * external_id: uuid
    * name: string
    * status: enum("active","suspended","revoked")
    * created_at: timestamp
    * updated_at: timestamp
}

entity Profile {
    * id: uuid
    --
    * operator_id: uuid <<FK>>
    * place_id: uuid <<FK>>
    * display_name: string
    * created_at: timestamp
    * updated_at: timestamp
}

entity Place {
    * id: uuid
    --
    * operator_id: uuid <<FK>>
    * name: string
    * type: enum("online","offline")
    * created_at: timestamp
    * updated_at: timestamp
}

entity Website {
    * id: uuid
    --
    * place_id: uuid <<FK>>
    * url: string
    * created_at: timestamp
    * updated_at: timestamp
}

entity Address {
    * id: uuid
    --
    * place_id: uuid <<FK>>
    * street: string
    * city: string
    * state: string
    * postal_code: string
    * country: string
    * created_at: timestamp
    * updated_at: timestamp
}

entity SupportContact {
    * id: uuid
    --
    * place_id: uuid <<FK>>
    * type: enum("email","phone","website")
    * value: string
    * created_at: timestamp
    * updated_at: timestamp
}

entity OpportunityPlace {
    * opportunity_id: uuid <<FK>>
    * place_id: uuid <<FK>>
}

entity Opportunity {
    * id: uuid
    --
    * operator_id: uuid <<FK>>
    * status: enum("draft","test_pending","test_passed","published","suspended","deleted")
    * date_from: date
    date_to: date
    url: string
    * created_at: timestamp
    * updated_at: timestamp
}

entity BeneficiaryBenefit {
    * id: uuid
    --
    * opportunity_id: uuid <<FK>>
    * value: integer
    * type: enum("percentual","absolute")
    * created_at: timestamp
    * updated_at: timestamp
}

entity CaregiverBenefit {
    * id: uuid
    --
    * opportunity_id: uuid <<FK>>
    * value: integer
    * type: enum("percentual","absolute")
    * created_at: timestamp
    * updated_at: timestamp
}

entity LocalizedMetadata {
    * id: uuid
    --
    * opportunity_id: uuid <<FK>>
    * key: enum("name","description","condition","type","category")
    * language: enum("en","fr","de","sl","it")
    * value: string
    * created_at: timestamp
    * updated_at: timestamp
}

Operator ||--|{ Place
Operator ||--|{ Opportunity
Operator ||--|| Profile
Profile ||--|| Place
Place ||--o| Address
Place ||--o| Website
Place ||--|{ SupportContact
Place ||--|{ OpportunityPlace
Opportunity ||--|{ OpportunityPlace
Opportunity ||--|| BeneficiaryBenefit
Opportunity ||--o| CaregiverBenefit
Opportunity ||--|{ LocalizedMetadata

@enduml
